chore(scheduler): javadoc, openapi, logs. jdbcClient error handling.